<?xml version="1.0"?>
<package format="2">
  <name>virtual_canvas_gui</name>
  <version>0.0.0</version>
  <description>Virtual canvas GUI for robot arm drawing</description>

  <maintainer email="nci@todo.todo">nci</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
